heroes ms application.properties and dockerfile fix

--- a/microservices/heroes-ms/Dockerfile
+++ b/microservices/heroes-ms/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY target/hero-ms.jar /app/hero-ms.jar
+COPY target/heroes-ms.jar /app/heroes-ms.jar
 
-CMD ["java", "-jar", "hero-ms.jar"]
+CMD ["java", "-jar", "heroes-ms.jar"]
 
 EXPOSE 8081
