--- a/microservices/heroes-ms/src/main/resources/application.properties
+++ b/microservices/heroes-ms/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://localhost:8089/oauth2/default
-
+spring.security.oauth2.resourceserver.jwt.issuer-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI:http://localhost:9080/auth/realms/entando-dev}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
