maven finalName to heroes-ms

--- a/microservices/heroes-ms/pom.xml
+++ b/microservices/heroes-ms/pom.xml
@@ -67,7 +67,7 @@
 
 	<build>
 		<defaultGoal>spring-boot:run</defaultGoal>
-		<finalName>springboot-agenda</finalName>
+		<finalName>heroes-ms</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
