--- a/microfrontends/hero-widget/tsconfig.json
+++ b/microfrontends/hero-widget/tsconfig.json
@@ -19,7 +19,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "noImplicitAny": false,
+    "noImplicitAny": false, // EntandoTips 
     "lib": [
       "ES2022",
       "dom"
