Update styles and add context parameters

--- a/microfrontends/hero-table-widget/angular.json
+++ b/microfrontends/hero-table-widget/angular.json
@@ -32,6 +32,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "customWebpackConfig": {
+              "path": "webpack.config.js"
+            },
             "scripts": []
           },
           "configurations": {
@@ -40,7 +43,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
