--- a/microservices/heroms/src/main/resources/application.yaml
+++ b/microservices/heroms/src/main/resources/application.yaml
@@ -4,3 +4,18 @@ server:
 spring:
   application:
     name: heroms
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
+    database: POSTGRESQL
+    show-sql: true
+    properties:
+      hibernate.id.new_generator_mappings: true
+      hibernate.connection.provider_disables_autocommit: true
+      hibernate.cache.use_query_cache: false
+      hibernate.generate_statistics: false
+      hibernate.format_sql: true
