--- a/microservices/heroms/pom.xml
+++ b/microservices/heroms/pom.xml
@@ -62,6 +62,8 @@
 	</dependencies>
 
 	<build>
+		<defaultGoal>spring-boot:run</defaultGoal>
+		<finalName>heroes-ms</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
