--- a/.entando/output/Dockerfile
+++ b/.entando/output/Dockerfile
@@ -3,3 +3,4 @@ LABEL org.entando.bundle-name="heroes"
 ADD .entando/output/descriptors/ .
 ADD microfrontends/form-hero-widget/dist widgets/form-hero-widget
 ADD microfrontends/table-hero-widget/dist widgets/table-hero-widget
+ADD microfrontends/simple-mfe-config/dist widgets/simple-mfe-config
