--- a/microservices/heroms/pom.xml
+++ b/microservices/heroms/pom.xml
@@ -31,6 +31,10 @@
 <!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -63,7 +67,7 @@
 
 	<build>
 		<defaultGoal>spring-boot:run</defaultGoal>
-		<finalName>heroes-ms</finalName>
+		<finalName>heroms</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
