--- a/microfrontends/simple-mfe-config/angular.json
+++ b/microfrontends/simple-mfe-config/angular.json
@@ -55,6 +55,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4202
+          },
           "configurations": {
             "production": {
               "buildTarget": "simple-mfe-config:build:production"
