create simple epc

--- a/.entando/output/Dockerfile
+++ b/.entando/output/Dockerfile
@@ -4,3 +4,4 @@ ADD .entando/output/descriptors/ .
 ADD microfrontends/form-hero-widget/dist widgets/form-hero-widget
 ADD microfrontends/table-hero-widget/dist widgets/table-hero-widget
 ADD microfrontends/simple-mfe-config/dist widgets/simple-mfe-config
+ADD microfrontends/simple-epc/build widgets/simple-epc
