add config widget

--- a/microfrontends/config-hero-widget/angular.json
+++ b/microfrontends/config-hero-widget/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "form-hero-widget": {
+    "config-hero-widget": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
           "options": {
-            "outputPath": "dist/form-hero-widget",
+            "outputPath": "dist/config-hero-widget",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -40,7 +40,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "6kb",
-                  "maximumError": "20kb"
+                  "maximumError": "10kb"
                 }
               ],
               "outputHashing": "all"
@@ -57,10 +57,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "form-hero-widget:build:production"
+              "buildTarget": "config-hero-widget:build:production"
             },
             "development": {
-              "buildTarget": "form-hero-widget:build:development"
+              "buildTarget": "config-hero-widget:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -68,7 +68,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "form-hero-widget:build"
+            "buildTarget": "config-hero-widget:build"
           }
         },
         "test": {
