--- a/microfrontends/table-hero-widget/angular.json
+++ b/microfrontends/table-hero-widget/angular.json
@@ -11,14 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
-            "outputPath":{ 
-              "base": "dist/table-hero-widget",
-              "browser": ""
-            },
+            "outputPath": "dist/table-hero-widget",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -43,7 +40,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumError": "20kb"
                 }
               ],
               "outputHashing": "all"
